# The-Inference-Engine-

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: log_config.json  main.py  middleware.py  schemas.py
docker/: Dockerfile.gateway  Dockerfile.ray
docs/: architecture.md
inference/: __init__.py  batching.py  engine.py  kv_cache.py
monitoring/: alerts.yml  metrics.py  prometheus.yml
monitoring/grafana/dashboards/: inference.json
monitoring/grafana/provisioning/dashboards/: provider.yml
ray_cluster/: __init__.py  bootstrap.py  serve_deployment.py  worker.py
tests/: conftest.py  load_test.py  test_api.py  test_inference.py
