[project]
name = "distributed-llm-inference"
version = "1.0.0"
description = "Production-grade LLM inference engine on Ray + Ollama"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
timeout = 60
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
